[metadata]
name = MIB
version = 0.0.0
description = A robot manipulation benchmark set using IsaacSim
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/ManipulationIsaacsBenchmark
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    gymnasium>=0.26.3

[options.extras_require]
doc = 
    sphinx==4.2.0
    myst-parser
    furo
    nbsphinx
    sphinx_book_theme
    sphinx-autobuild
    sphinx-autoapi


[options.entry_points]
console_scripts =
    mib-franka-base = MIB.test_run:main